# reez

./: .dockerignore  .gitignore  .gitmodules  AI_REPORTING_IMPLEMENTATION_COMPLETE.md  AI_REPORTING_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_AI_TESTING_REPORT.md  DICOM_BUFFER_OVERRUN_SOLUTIONS.md  Dockerfile  LICENSE  ORTHANC_STORAGE_CONFIG_GUIDE.md  Plan.md  ai_system_test_report_20250804_144156.json  ai_system_test_report_20250804_144219.json  ai_system_test_report_20250804_144418.json  ai_workflow_test_report_20250804_144715.json  ai_workflow_test_report_20250804_144819.json  check_instance_endpoints.py  check_orthanc_storage.sh  ct-scan.md  db.sqlite3  debug_orthanc_connection.py  debug_orthanc_detail.py  debug_study.py  debug_thumbnail_issue.py  diagnose_orthanc_issue.py  dicom-fetch-strategy.md  docker-compose.yml  exam.xlsx  manage.py  multiple-pacs.md  orthanc-test.mjs  package-lock.json  package.json  pyproject.toml  reez.ipynb  restructure-mwl-dicom.md  ris-dashboard.md  test_ai_endpoints.py  test_ai_frontend_integration.py  (+23 more)
annotations/: README.md  admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
audit/: PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  admin.py  apps.py  middleware.py  mixins.py  models.py  permissions.py  security.py  serializers.py  signals.py  test_results_summary.md  test_simple.py  tests.py  urls.py  utils.py  views.py
custom/: katanama.py  mypdf.py
deployment/: PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  production.env
(+369 files in other folders)
